--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,33 @@
     specific language governing permissions and limitations
     under the License.
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <h2>75.5Khashes/Sec</h2>
+  <p>share progress:</p> 
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+      75%
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
+
+
+
 <html>
     <head>
         <meta charset="utf-8" />
@@ -27,14 +54,14 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>MinerTest</title>
     </head>
     <body>
         <div class="app">
             <h1>cgminer</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">starting cgminer</p>
-                <p class="event received">running.... 2.5Khashes/Sec</p>
+                <p class="event received">2.5Khashes/Sec</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
@@ -42,5 +69,5 @@
         <script type="text/javascript">
             app.initialize();
         </script>
-    </body>
+      </body>
 </html>
