--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,6 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Bootstrap Example</title>
@@ -32,8 +31,32 @@
 <body>
 
 <div class="container">
-  <h2>75.5Khashes/Sec</h2>
-  <p>share progress:</p> 
+  <h2>Core:1</h2>
+  <p>75Khashes/sec:</p> 
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width:35%">
+      35%
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
+
+
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <h2>Core:2</h2>
+  <p>75Khashes/sec:</p> 
   <div class="progress">
     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
       75%
@@ -43,8 +66,6 @@
 
 </body>
 </html>
-
-
 
 <html>
     <head>
@@ -60,8 +81,8 @@
         <div class="app">
             <h1>cgminer</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">starting cgminer</p>
-                <p class="event received">2.5Khashes/Sec</p>
+                <p class="event listening"></p>
+                <p class="event received"></p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
